--- a/templates/login.html
+++ b/templates/login.html
@@ -49,6 +49,7 @@
 								</div>
 	            </div>
 	          </form>
+	          <script src="//code.tidio.co/7eodlalprwt7gju7lpgc5wsw4dgtovfm.js" async></script>
 	        </div>
 				</div>
 			</div>
