--- a/templates/student_database.html
+++ b/templates/student_database.html
@@ -42,7 +42,7 @@
                     <div class="sb-sidenav-menu">
                         <div class="nav">
                             <div class="sb-sidenav-menu-heading">Core</div>
-                            <a class="nav-link" href="/dashboard">
+                            <a class="nav-link" href="index.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Dashboard
                             </a>
@@ -54,10 +54,8 @@
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="layout-static.html"> Student Database</a>
-                                    <a class="nav-link" href="/parents_database"> Parents Database</a>
-                                    <a class="nav-link" href="/register_learner">Student Registration</a>
-                                    <a class="nav-link" href="/review_students">Review Student Registrations</a>
+                                    <a class="nav-link" href="layout-static.html">Database</a>
+                                    <a class="nav-link" href="/register_learner">Registration</a>
                                 </nav>
                             </div>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
